<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/levels"
        android:title="@string/level">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/low"
                    android:title="@string/low" />
                <item
                    android:id="@+id/middle"
                    android:title="@string/middle" />
                <item
                    android:id="@+id/high"
                    android:title="@string/high" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/single"
        android:checkable="true"
        android:title="@string/use_single"/>

</menu>